--- a/style_annonce1.css
+++ b/style_annonce1.css
@@ -1,5 +1,3 @@
-/* style entete */
-
 header {
     background-color: #ffffff;
     position: fixed;
@@ -20,7 +18,6 @@ header {
 .logo_text {
     height: 8vh;
     margin-top: 20px;
-    margin-left: -10%;
 }
 
 nav {
@@ -41,15 +38,14 @@ nav button:hover {
     opacity: 0.8;
 }
 
-
-
-.container {
-    position: fixed;
-    top: 20%;
-    left: 2%;
+body {
+    padding: 20px;
+    background-image: url(images/background2.jpg);
+    background-size: cover;
+    height: 100vh;
+    background-attachment: fixed;
 }
-
-button {
+#liste_annonce button {
     background-color: rgb(66, 21, 21);
     color: #fff;
     padding: 12px 20px;
@@ -58,9 +54,30 @@ button {
     margin-bottom: 10px;
     border-radius: 3px;
 }
+.container_annonce {
+    margin-top: 60px;
+    padding: 40px 0px 10px 10px;
+    background-color: white;
+    text-align: center;
 
-.img_enchere {
-    float: right;
-    width: 45%;
-    margin-left: -280px;
+}
+
+.titre_annonce {
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+        color: #561e07;
+        font-weight: 600;
+        font-size: 2rem;
+}
+
+ul{
+    background-color: white; opacity : 0.7;
+    margin-top: -20px;
+    padding: 0px 0px 20px 50px;
+}
+#liste_annonce {
+    margin-top: 25px;
+    text-align: center;
+}    
+li {
+    list-style: none;
 }
