--- a/style_connexion1.css
+++ b/style_connexion1.css
@@ -69,7 +69,7 @@ form {
 form input {
     font-family: "Roboto", sans-serif;
     outline: 0;
-    background: white;
+        background-color: lightgrey;
     width: 100%;
     border: 0;
     margin: 0 0 15px;
