--- a/style_inscript1.css
+++ b/style_inscript1.css
@@ -70,7 +70,7 @@ form {
 form input {
     font-family: "Roboto", sans-serif;
     outline: 0;
-    background: white;
+    background: #d6d3d3;
     width: 100%;
     border: 0;
     margin: 0 0 15px;
